log
Thu 09 Mar 2023 04:19:49 PM UTC: 
 tests:  0|7
total_score: 0/70
f72b708
Thu 16 Mar 2023 03:14:43 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
6ad5640
Thu 16 Mar 2023 03:24:30 PM UTC: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:28:7: error: ‘max’ redeclared as different kind of symbol
   28 |   int max=0;
      |       ^~~
exercises.c:27:38: note: previous definition of ‘max’ was here
   27 | void arrayMaxMin(int *a, int n, int *max, int *min) {
      |                                 ~~~~~^~~
exercises.c:29:7: error: ‘min’ redeclared as different kind of symbol
   29 |   int min = *a[0];
      |       ^~~
exercises.c:27:48: note: previous definition of ‘min’ was here
   27 | void arrayMaxMin(int *a, int n, int *max, int *min) {
      |                                           ~~~~~^~~
exercises.c:29:13: error: invalid type argument of unary ‘*’ (have ‘int’)
   29 |   int min = *a[0];
      |             ^~~~~
exercises.c:32:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   32 |       if(*a[i]>max)
      |          ^~~~~
exercises.c:34:13: error: invalid type argument of unary ‘*’ (have ‘int’)
   34 |         max=*a[i];
      |             ^~~~~
exercises.c:36:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   36 |       if(*a[i]<min)
      |          ^~~~~
exercises.c:38:13: error: invalid type argument of unary ‘*’ (have ‘int’)
   38 |         min=*a[i];
      |             ^~~~~
Compilation failed
f5452d2
Thu 16 Mar 2023 03:25:07 PM UTC: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:29:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   29 |   *min = *a[0];
      |          ^~~~~
exercises.c:32:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   32 |       if(*a[i]>*max)
      |          ^~~~~
exercises.c:34:14: error: invalid type argument of unary ‘*’ (have ‘int’)
   34 |         *max=*a[i];
      |              ^~~~~
exercises.c:36:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   36 |       if(*a[i]<*min)
      |          ^~~~~
exercises.c:38:14: error: invalid type argument of unary ‘*’ (have ‘int’)
   38 |         *min=*a[i];
      |              ^~~~~
Compilation failed
c6dc295
Thu 16 Mar 2023 03:26:54 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 20/70
2d866d5
